- fix spacings v3.

--- a/src/components/SectionTitle/SectionTitle.module.scss
+++ b/src/components/SectionTitle/SectionTitle.module.scss
@@ -97,7 +97,7 @@
             height: 56px;
 
             .title {
-                font-size: 32px;
+                font-size: 29px;
             }
 
             .subtitle{
